# nvml-rest-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
nvml_rest_api/: __init__.py  main.py  models.py  nvml_service.py
